@@ -1,0 +1,71 @@
+# LINBO start.conf Beispiel mit Opsi-Optionen
+# Windows 10 auf Partition 1 (NTFS)
+# Cache auf Partition 2
+# Daten auf Partition 3
+# Festplatte 160G
+
+[LINBO]                  # globale Konfiguration
+Server = 10.16.1.1       # IP des Linbo-Servers, der das Linbo-Repository vorhaelt
+Group = gruppe           # Name der Rechnergruppe fuer die diese Konfigurationsdatei gilt
+# Achtung: Server und Group werden beim Workstationsimport automatisch gesetzt!
+Cache = /dev/sda2        # lokale Cache Partition
+RootTimeout = 600        # automatischer Rootlogout nach 600 Sek.
+AutoPartition = no       # automatische Partitionsreparatur beim LINBO-Start
+AutoFormat = no          # kein automatisches Formatieren aller Partitionen beim LINBO-Start
+AutoInitCache = no       # kein automatisches Befuellen des Caches beim LINBO-Start
+DownloadType = torrent   # Image-Download per torrent|multicast|rsync, default ist rsync
+BackgroundFontColor = white         # Bildschirmschriftfarbe (default: white)
+ConsoleFontColorStdout = lightgreen # Konsolenschriftfarbe (default: white)
+ConsoleFontColorStderr = orange     # Konsolenschriftfarbe fuer Fehler-/Warnmeldungen (default: red)
+SystemType = bios                   # moeglich ist bios|bios64|efi32|efi64 (Standard: bios fuer bios 32bit)
+KernelOptions = quiet splash        # Beispiele:
+#KernelOptions = acpi=noirq irqpoll # LINBO Kerneloptionen (z. B. acpi=off), m. Leerz. getrennt
+#KernelOptions = server=10.16.1.5   # Abweichende Linbo-Server-IP als Kerneloption gesetzt
+                                    # falls gesetzt wird diese IP beim Workstationsimport verwendet
+
+[Partition]              # Start einer Partitionsdefinition fuer ein Betriebssystem (Windows)
+Dev = /dev/sda1          # Device-Name der Partition (sda1 = erste Partition auf erster Platte)
+Label = windows          # Partitionslabel
+Size = 50G               # Partitionsgroesse 30G, ist keine Einheit (M, G oder T) angegeben, wird kiB angenommen
+Id = 7                   # Partitionstyp (83 = Linux, 82 = swap, c = FAT32, 7 = NTFS, ...)
+FSType = ntfs            # Dateisystem ext4
+Bootable = yes           # Bootable-Flag
+
+[Partition]              # Start einer Partitionsdefinition, Cachepartition
+Dev = /dev/sda2          # Device-Name der Partition (sda2 = zweite Partition auf erster Platte)
+Label = cache            # Partitionslabel
+Size = 50G               # Partitionsgroesse 30G
+Id = 83                  # Partitionstyp (83 = Linux, 82 = swap, c = FAT32, 7 = NTFS, ...)
+FSType = ext4            # Dateisystem ext4
+Bootable = yes           # Bootable-Flag
+
+[Partition]              # Definition der Swap-Partition
+Dev = /dev/sda3          # Device-Name der Partition (sda3 = dritte Partition auf erster Platte)
+Label = daten            # Partitionslabel
+Size =                   # Partitionsgroesse (Rest der Platte)
+Id = 7                   # Partitionstyp (83 = Linux, 82 = swap, c = FAT32, ...)
+FSType = ntfs            # Dateisystem swap
+Bootable = no            # Bootable-Flag
+
+[OS]                       # Beginn einer Betriebssystemdefinition
+Name = Windows 10          # Name des Betriebssystems
+Version =                  # Version (unbenutzt, leer lassen)
+Description = Windows 10   # Beschreibung
+IconName = win10.png       # Icon fuer den Startbutton, muss unter /var/linbo/icons abgelegt sein
+Image =                    # differentielles Image (Erweiterung .rsync, Verwendung nicht empfohlen)
+BaseImage = win10.cloop    # Dateiname des Basisimages (Erweiterung .cloop)
+Boot = /dev/sda1           # Bootpartition (unbenutzt, immer gleich Rootpartition)
+Root = /dev/sda1           # Rootpartition, in die das BS installiert ist
+Kernel = auto              # Windows: auto (LINBO & Grub erkennen die Startparameter automatisch)
+Initrd =                   # Windows: leer
+Append =                   # Windows: leer
+StartEnabled = yes         # "Start"-Button anzeigen
+SyncEnabled = yes          # "Sync+Start"-Button anzeigen
+NewEnabled = yes           # "Neu+Start"-Button anzeigen
+Autostart = no             # automatischer Start des Betriebssystems (yes|no)
+AutostartTimeout = 5       # Timeout in Sekunden fuer Benutzerabbruch bei Autostart
+DefaultAction = sync       # Standardaktion bei Autostart: start|sync|new
+RestoreOpsiState = yes     # Stellt nach dem Sync den Opsi-Produktstatus wieder Fehler
+ForceOpsiSetup = windows.domainjoin,swaudit
+# Komma separierte Liste von Opsi Produkt-IDs, die nach dem Sync auf Setup gestellt werden
+Hidden = yes               # verstecke OS-Reiter (unbenutzte Option, auf "yes" lassen)
